--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "react-native-form-component",
   "version": "0.1.0",
   "description": "A customizable form component for react-native. It does validation of input, and also alerts you of a failed validation.",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
+  "main": "src/index",
   "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
     "src",
     "lib",
-    "android",
-    "ios",
-    "cpp",
-    "react-native-form-component.podspec",
     "!lib/typescript/example",
     "!**/__tests__",
     "!**/__fixtures__",
@@ -32,7 +27,9 @@
   "keywords": [
     "react-native",
     "ios",
-    "android"
+    "android",
+    "form",
+    "validated form"
   ],
   "repository": "https://github.com/klazbaba/react-native-form-component",
   "author": "klazbaba <giwaklaz@gmail.com> (https://github.com/klazbaba)",
@@ -42,14 +39,12 @@
   },
   "homepage": "https://github.com/klazbaba/react-native-form-component#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
-    "commitlint": "^8.3.5",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -75,14 +70,8 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "yarn lint && yarn typescript"
     }
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
   },
   "release-it": {
     "git": {
