should now build before commit

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn typescript"
+      "pre-commit": "yarn lint && yarn typescript && yarn prepare"
     }
   },
   "release-it": {
