--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "lint-staged": ">=10",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.11.0",
@@ -69,7 +70,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn typescript && yarn prepare"
+      "pre-commit": "lint-staged"
     }
   },
   "release-it": {
@@ -101,6 +102,12 @@
     "output": "lib",
     "targets": [
       "typescript"
+    ]
+  },
+  "lint-staged": {
+    "*.{js, jsx, ts, tsx}": [
+      "eslint --cache --fix",
+      "prettier --write"
     ]
   }
 }
