updated pre commit command

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn typescript"
+      "pre-commit": "yarn lint && yarn typescript && yarn prepare"
     }
   },
   "commitlint": {
