--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "form component",
     "component",
     "react-native-web",
-    "web"
+    "web",
+    "picker"
   ],
   "repository": "https://github.com/klazbaba/react-native-form-component",
   "author": "klazbaba <giwaklaz@gmail.com> (https://github.com/klazbaba)",
