--- a/example/package.json
+++ b/example/package.json
@@ -14,15 +14,17 @@
   "dependencies": {
     "expo": "^40.0.0",
     "expo-splash-screen": "~0.8.1",
-    "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.2",
+    "react-native": "0.66.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.14.9"
   },
   "devDependencies": {
     "@babel/core": "~7.12.10",
-    "@babel/runtime": "^7.9.6",
+    "@babel/runtime": "^7.12.5",
+    "@types/react": "^17.0.27",
+    "@types/react-native": "^0.65.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "8.3.0",
     "expo-cli": "^4.0.13"
