--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-form-component",
   "version": "1.1.2",
-  "description": "A customizable form component for react-native and react-native-web. It does validation of input, and also alerts you of a failed validation.",
+  "description": "A customizable form component for react-native and react-native-web. It does validation of input, and also alerts you of failed validations.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
