--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
+    "@testing-library/react-native": "^9.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^17.0.27",
     "@types/react-native": "^0.66.0",
@@ -52,11 +53,13 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.69.0",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-builder-bob": "^0.18.0",
+    "react-test-renderer": "^17.0.2",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
