--- a/example/package.json
+++ b/example/package.json
@@ -12,21 +12,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^40.0.0",
-    "expo-splash-screen": "~0.8.1",
-    "react": "17.0.2",
-    "react-dom": "16.13.1",
-    "react-native": "0.66.0",
+    "expo": "^46.0.0",
+    "expo-splash-screen": "~0.16.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.14.9"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.10",
+    "@babel/core": "^7.18.6",
     "@babel/runtime": "^7.12.5",
-    "@types/react": "^17.0.31",
-    "@types/react-native": "^0.66.0",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "8.3.0",
+    "babel-preset-expo": "~9.2.0",
     "expo-cli": "^4.0.13"
   }
 }
