--- a/example/package.json
+++ b/example/package.json
@@ -23,8 +23,8 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/runtime": "^7.12.5",
-    "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1",
+    "@types/react": "~18.0.26",
+    "@types/react-native": "^0.69.8",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "~9.2.0",
     "expo-cli": "^4.0.13"
