--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -9,8 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "noImplicitAny": false
+    "moduleResolution": "node"
   },
   "extends": "expo/tsconfig.base"
 }
